# cpp-server-sdk

./: .gitignore  CHANGELOG.md  README.md
Demo/: CMakeLists.txt  main.cpp
Demo/thirdPark/tacpp/include/tacpp/: TANetworking.h  ThinkingAnalyticsAPI.h
cpp/: CMakeLists.txt  Makefile  program
cpp/example/: CMakeLists.txt  batchConsmerDemo.cpp  debugConsumerDemo.cpp  program.cpp
cpp/include/: TABatchConsumer.h  TAConsumer.h  TADebugConsumer.h  TALoggerConsumer.h  TANetwork.h  TAUtils.h  TDAnalytics.h  TDBatchConsumer.h  TDConsumer.h  TDDebugConsumer.h  TDJsonParse.h  TDLoggerConsumer.h  TDNetwork.h  TDUtils.h  ThinkingAnalyticsAPI.h
cpp/include/tacpp/: TAConsumer.h  TAUtils.h
cpp/src/: TABatchConsumer.cpp  TAConsumer.cpp  TADebugConsumer.cpp  TALoggerConsumer.cpp  TANetwork.cpp  TANetworking.cpp  TAUtils.cpp  TDAnalytics.cpp  TDBatchConsumer.cpp  TDConsumer.cpp  TDDebugConsumer.cpp  TDLoggerConsumer.cpp  TDNetwork.cpp  TDUtils.cpp  ThinkingAnalyticsAPI.cpp
libs/include/: TADebugConsumer.h  TALoggerConsumer.h  TAUtils.h  ThinkingAnalyticsAPI.h
